syntax = "proto3";

package order;

service OrderService {
  rpc createOrder (CreateOrderRequest) returns (OrderResponse);
  rpc cancelOrder (CancelOrderRequest) returns (CancelOrderResponse);
}

message CreateOrderRequest {
  int64 id = 1;
  User user = 2;
  repeated OrderItem orderItems = 3;
}

message OrderItem {
  int32 productId = 1;
  int32 quantity = 2;
} 

message OrderResponse {
  int64 id = 1;
  string status = 2;
  double total = 3;
  repeated OrderItem orderItems = 4;
}

message CancelOrderRequest {
  int64 orderId = 1;
  string status = 2;
}

message CancelOrderResponse {}

message User {
  bool valid = 1;
  int32 id = 2;
  string email = 3;
  string username = 4;
  string role = 5;
}
