syntax = "proto3";

package product;

service ProductService {
  rpc findOne (FindProductByIdRequest) returns (Product);
  rpc findMany (FindManyRequest) returns (ProductListResponse);
  rpc reserveStock (ReserveStockRequest) returns (ReserveStockResponse);
  rpc rollbackStock (ReserveStockRequest) returns (ReserveStockResponse);
}

message User {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string role = 4;
}

message FindProductByIdRequest {
  int32 id = 1;
}

message Product {
  int32 id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
  int32 holding = 5;
}

message FindManyRequest {
  repeated int32 ids = 1;
  repeated int32 quantities = 2;
}

message ProductListResponse {
  repeated Product products = 1;
}

message OrderItem {
  int32 productId = 1;
  int32 quantity = 2;
}

message ReserveStockRequest {
  int64 orderId = 1;
  repeated OrderItem items = 2;
}

message ReserveStockResponse {
  bool success = 1;
}